--- a/jamms/jamms/jamms.vcxproj
+++ b/jamms/jamms/jamms.vcxproj
@@ -47,12 +47,12 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\Steph\Projects\COMP345\SFML-2.1\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Steph\Projects\COMP345\jamms\jamms\jamms\include;C:\Users\Steph\Projects\COMP345\SFML-2.1\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -82,15 +82,20 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h" />
-    <ClInclude Include="targetver.h" />
+    <ClInclude Include="helpers\SpriteHelper.h" />
+    <ClInclude Include="include\Game.h" />
+    <ClInclude Include="include\MainMenu.h" />
+    <ClInclude Include="include\SplashScreen.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="jamms.cpp" />
-    <ClCompile Include="stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-    </ClCompile>
+    <Image Include="Resources\Images\SplashScreen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\Game.cpp" />
+    <ClCompile Include="src\jamms.cpp" />
+    <ClCompile Include="src\utility\SpriteHelper.cpp" />
+    <ClCompile Include="src\views\MainMenu.cpp" />
+    <ClCompile Include="src\views\SplashScreen.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
