--- a/jamms/jamms/jamms.vcxproj.filters
+++ b/jamms/jamms/jamms.vcxproj.filters
@@ -13,20 +13,20 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Source Files\utility">
-      <UniqueIdentifier>{e41abed1-d45a-41ab-982d-5c77054410e9}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\views">
       <UniqueIdentifier>{2d8899d7-131c-4c25-9b05-78568e949c20}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\helpers">
+      <UniqueIdentifier>{e41abed1-d45a-41ab-982d-5c77054410e9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\managers">
+      <UniqueIdentifier>{aeb1b895-9f85-499e-b3c6-d83e67e6c01d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="helpers\SpriteHelper.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="include\SplashScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -34,6 +34,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\MainMenu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\TextureManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -55,8 +58,8 @@
     <ClCompile Include="src\views\SplashScreen.cpp">
       <Filter>Source Files\views</Filter>
     </ClCompile>
-    <ClCompile Include="src\utility\SpriteHelper.cpp">
-      <Filter>Source Files\utility</Filter>
+    <ClCompile Include="src\managers\TextureManager.cpp">
+      <Filter>Source Files\managers</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
