--- a/jamms/jamms/jamms.vcxproj
+++ b/jamms/jamms/jamms.vcxproj
@@ -95,9 +95,9 @@
     <Image Include="Resources\Images\SplashScreen.png" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="include\Pathogen.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\GameObject.cpp" />
+    <ClCompile Include="src\gameObjects\Pathogen.cpp" />
     <ClCompile Include="src\jamms.cpp" />
     <ClCompile Include="src\managers\GameObjectManager.cpp" />
     <ClCompile Include="src\managers\TextureManager.cpp" />
