--- a/jamms/jamms/jamms.vcxproj.filters
+++ b/jamms/jamms/jamms.vcxproj.filters
@@ -19,7 +19,7 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Source Files\game_objects">
+    <Filter Include="Source Files\gameObjects">
       <UniqueIdentifier>{ce0304ce-462c-4a03-8bef-8aac31d972b8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -77,8 +77,8 @@
     <ClCompile Include="src\managers\GameObjectManager.cpp">
       <Filter>Source Files\managers</Filter>
     </ClCompile>
-    <ClCompile Include="include\Pathogen.cpp">
-      <Filter>Source Files\game_objects</Filter>
+    <ClCompile Include="src\gameObjects\Pathogen.cpp">
+      <Filter>Source Files\gameObjects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
