Working on animations

--- a/TowerDefense/TowerDefense/TowerDefense.vcxproj
+++ b/TowerDefense/TowerDefense/TowerDefense.vcxproj
@@ -81,7 +81,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\gameObjects\Critter.h" />
+    <ClInclude Include="include\gameObjects\CritterFactory.h" />
     <ClInclude Include="include\gameObjects\GameObject.h" />
+    <ClInclude Include="include\gameObjects\WhiteCat.h" />
     <ClInclude Include="include\gameStates\GameState.h" />
     <ClInclude Include="include\gameStates\GameStateMainMenu.h" />
     <ClInclude Include="include\gameStates\GameStatePlay.h" />
@@ -89,18 +92,24 @@
     <ClInclude Include="include\managers\GameObjectManager.h" />
     <ClInclude Include="include\managers\TextureManager.h" />
     <ClInclude Include="include\test\TextureManagerTest.h" />
+    <ClInclude Include="include\utils\Animation.h" />
+    <ClInclude Include="include\utils\AnimationHandler.h" />
     <ClInclude Include="include\views\MainMenu.h" />
     <ClInclude Include="include\views\Menu.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp" />
+    <ClCompile Include="src\gameObjects\Critter.cpp" />
+    <ClCompile Include="src\gameObjects\CritterFactory.cpp" />
     <ClCompile Include="src\gameObjects\GameObject.cpp" />
+    <ClCompile Include="src\gameObjects\WhiteCat.cpp" />
     <ClCompile Include="src\gameStates\GameStateMainMenu.cpp" />
     <ClCompile Include="src\gameStates\GameStatePlay.cpp" />
     <ClCompile Include="src\gameStates\GameStateStart.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\managers\GameObjectManager.cpp" />
     <ClCompile Include="src\managers\TextureManager.cpp" />
+    <ClCompile Include="src\utils\AnimationHandler.cpp" />
     <ClCompile Include="src\views\MainMenu.cpp" />
     <ClCompile Include="src\views\Menu.cpp" />
     <ClCompile Include="test\TextureManagerTest.cpp" />
