--- a/TowerDefense/TowerDefense/TowerDefense.vcxproj.filters
+++ b/TowerDefense/TowerDefense/TowerDefense.vcxproj.filters
@@ -99,7 +99,7 @@
     <ClInclude Include="include\gameObjects\WhiteCat.h">
       <Filter>Header Files\GameObjects</Filter>
     </ClInclude>
-    <ClInclude Include="src\utils\Waypoint.h">
+    <ClInclude Include="include\utils\Waypoint.h">
       <Filter>Header Files\Utils</Filter>
     </ClInclude>
   </ItemGroup>
