testing of interface design and button class

--- a/TowerDefense/TowerDefense/TowerDefense.vcxproj
+++ b/TowerDefense/TowerDefense/TowerDefense.vcxproj
@@ -81,6 +81,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\Button.h" />
+    <ClInclude Include="include\Command.h" />
+    <ClInclude Include="include\EditorButtons.h" />
     <ClInclude Include="include\Game.h" />
     <ClInclude Include="include\gameObjects\Critter.h" />
     <ClInclude Include="include\gameObjects\CritterFactory.h" />
@@ -88,6 +91,7 @@
     <ClInclude Include="include\gameObjects\Tile.h" />
     <ClInclude Include="include\gameObjects\WhiteCat.h" />
     <ClInclude Include="include\gameStates\GameState.h" />
+    <ClInclude Include="include\gameStates\GameStateEditor.h" />
     <ClInclude Include="include\gameStates\GameStateMainMenu.h" />
     <ClInclude Include="include\gameStates\GameStatePlay.h" />
     <ClInclude Include="include\gameStates\GameStateStart.h" />
@@ -104,12 +108,15 @@
     <ClInclude Include="include\views\Menu.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Button.cpp" />
+    <ClCompile Include="src\EditorButtons.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\gameObjects\Critter.cpp" />
     <ClCompile Include="src\gameObjects\CritterFactory.cpp" />
     <ClCompile Include="src\gameObjects\GameObject.cpp" />
     <ClCompile Include="src\gameObjects\Tile.cpp" />
     <ClCompile Include="src\gameObjects\WhiteCat.cpp" />
+    <ClCompile Include="src\GameStateEditor.cpp" />
     <ClCompile Include="src\gameStates\GameStateMainMenu.cpp" />
     <ClCompile Include="src\gameStates\GameStatePlay.cpp" />
     <ClCompile Include="src\gameStates\GameStateStart.cpp" />
