Spawing Critter at first waypoint

--- a/TowerDefense/TowerDefense/TowerDefense.vcxproj
+++ b/TowerDefense/TowerDefense/TowerDefense.vcxproj
@@ -124,6 +124,7 @@
     <ClCompile Include="test\TextureManagerTest.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="resources\images\WhiteCatSpriteSheet.png" />
     <Image Include="resources\MainMenuScreen.png" />
     <Image Include="resources\SplashScreen.png" />
   </ItemGroup>
