--- a/TowerDefense/TowerDefense/TowerDefense.vcxproj.filters
+++ b/TowerDefense/TowerDefense/TowerDefense.vcxproj.filters
@@ -181,5 +181,8 @@
     <Image Include="resources\SplashScreen.png">
       <Filter>Resource Files\Images</Filter>
     </Image>
+    <Image Include="resources\images\WhiteCatSpriteSheet.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
   </ItemGroup>
 </Project>
