Working waypoint system now aligned to map

--- a/TowerDefense/TowerDefense/TowerDefense.vcxproj
+++ b/TowerDefense/TowerDefense/TowerDefense.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="test\TextureManagerTest.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="resources\images\critters\WhiteCatSpriteSheet.png" />
     <Image Include="resources\images\towers\AntibacterialTower_0.png" />
     <Image Include="resources\images\towers\AntibacterialTower_1.png" />
     <Image Include="resources\images\towers\AntibacterialTower_2.png" />
@@ -146,7 +147,6 @@
     <Image Include="resources\images\towers\WhiteBloodCellTower_0.png" />
     <Image Include="resources\images\towers\WhiteBloodCellTower_1.png" />
     <Image Include="resources\images\towers\WhiteBloodCellTower_2.png" />
-    <Image Include="resources\images\WhiteCatSpriteSheet.png" />
     <Image Include="resources\MainMenuScreen.png" />
     <Image Include="resources\SplashScreen.png" />
   </ItemGroup>
