map editor interface complete, game now owns static map

--- a/TowerDefense/TowerDefense/TowerDefense.vcxproj
+++ b/TowerDefense/TowerDefense/TowerDefense.vcxproj
@@ -94,6 +94,7 @@
     <ClInclude Include="include\gameObjects\WhiteCat.h" />
     <ClInclude Include="include\gameStates\GameState.h" />
     <ClInclude Include="include\gameStates\GameStateMainMenu.h" />
+    <ClInclude Include="include\gameStates\GameStateMapEditor.h" />
     <ClInclude Include="include\gameStates\GameStatePlay.h" />
     <ClInclude Include="include\gameStates\GameStateStart.h" />
     <ClInclude Include="include\managers\GameObjectManager.h" />
@@ -123,6 +124,7 @@
     <ClCompile Include="src\gameObjects\ShihTzu.cpp" />
     <ClCompile Include="src\gameObjects\WhiteCat.cpp" />
     <ClCompile Include="src\gameStates\GameStateMainMenu.cpp" />
+    <ClCompile Include="src\gameStates\GameStateMapEditor.cpp" />
     <ClCompile Include="src\gameStates\GameStatePlay.cpp" />
     <ClCompile Include="src\gameStates\GameStateStart.cpp" />
     <ClCompile Include="src\Main.cpp" />
