--- a/TowerDefense/TowerDefense/TowerDefense.vcxproj
+++ b/TowerDefense/TowerDefense/TowerDefense.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="include\gameObjects\Critter.h" />
     <ClInclude Include="include\gameObjects\CritterFactory.h" />
     <ClInclude Include="include\gameObjects\GameObject.h" />
+    <ClInclude Include="include\gameObjects\Projectile.h" />
     <ClInclude Include="include\gameObjects\Tile.h" />
     <ClInclude Include="include\gameObjects\Tower.h" />
     <ClInclude Include="include\gameObjects\ShihTzu.h" />
@@ -105,6 +106,7 @@
     <ClInclude Include="include\test\TextureManagerTest.h" />
     <ClInclude Include="include\utils\Animation.h" />
     <ClInclude Include="include\utils\AnimationHandler.h" />
+    <ClInclude Include="include\utils\ClosestToEndTile.h" />
     <ClInclude Include="include\utils\ConsoleColor.h" />
     <ClInclude Include="include\utils\rapidxml.hpp" />
     <ClInclude Include="include\utils\rapidxml_print.hpp" />
@@ -120,6 +122,7 @@
     <ClCompile Include="src\gameObjects\Critter.cpp" />
     <ClCompile Include="src\gameObjects\CritterFactory.cpp" />
     <ClCompile Include="src\gameObjects\GameObject.cpp" />
+    <ClCompile Include="src\gameObjects\Projectile.cpp" />
     <ClCompile Include="src\gameObjects\Tile.cpp" />
     <ClCompile Include="src\gameObjects\Tower.cpp" />
     <ClCompile Include="src\gameObjects\ShihTzu.cpp" />
