Moving critter wave

--- a/TowerDefense/TowerDefense/TowerDefense.vcxproj.filters
+++ b/TowerDefense/TowerDefense/TowerDefense.vcxproj.filters
@@ -78,9 +78,6 @@
     <ClInclude Include="include\gameStates\GameStatePlay.h">
       <Filter>Header Files\GameStates</Filter>
     </ClInclude>
-    <ClInclude Include="include\gameStates\GameStateStart.h">
-      <Filter>Header Files\GameStates</Filter>
-    </ClInclude>
     <ClInclude Include="include\managers\GameObjectManager.h">
       <Filter>Header Files\Managers</Filter>
     </ClInclude>
@@ -146,6 +143,12 @@
     </ClInclude>
     <ClInclude Include="include\managers\CritterWave.h">
       <Filter>Header Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\gameStates\GameStateStart.h">
+      <Filter>Header Files\GameStates</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -226,6 +229,9 @@
     </ClCompile>
     <ClCompile Include="src\managers\CritterWave.cpp">
       <Filter>Source Files\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Player.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
