--- a/TowerDefense/TowerDefense/TowerDefense.vcxproj.filters
+++ b/TowerDefense/TowerDefense/TowerDefense.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClInclude Include="include\gameStates\GameStateGameOver.h">
       <Filter>Header Files\GameStates</Filter>
     </ClInclude>
+    <ClInclude Include="include\gameStates\GameStateWin.h">
+      <Filter>Header Files\GameStates</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
@@ -243,6 +246,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\gameStates\GameStateGameOver.cpp">
+      <Filter>Source Files\GameStates</Filter>
+    </ClCompile>
+    <ClCompile Include="src\gameStates\GameStateGameWin.cpp">
       <Filter>Source Files\GameStates</Filter>
     </ClCompile>
   </ItemGroup>
