--- a/TowerDefense/TowerDefense/TowerDefense.vcxproj
+++ b/TowerDefense/TowerDefense/TowerDefense.vcxproj
@@ -111,6 +111,7 @@
     <ClInclude Include="include\utils\Animation.h" />
     <ClInclude Include="include\utils\AnimationHandler.h" />
     <ClInclude Include="include\utils\ConsoleColor.h" />
+    <ClInclude Include="include\utils\TowerStrategy.h" />
     <ClInclude Include="include\utils\rapidxml.hpp" />
     <ClInclude Include="include\utils\rapidxml_print.hpp" />
     <ClInclude Include="include\utils\Waypoint.h" />
